# matter

./: .gitmodules  BUILD.gn
.github/workflows/: cirque.yaml  examples-k32w.yaml  examples-nxp.yaml
config/nxp/chip-module/: CMakeLists.txt  Kconfig  Kconfig.defaults  Kconfig.features  generate_factory_data.cmake
config/zephyr/: Kconfig
docs/guides/: BUILDING.md  nxp_manufacturing_flow.md  nxp_rw61x_ota_software_update.md
docs/guides/nxp/: README.md  nxp_manufacturing_flow.md  nxp_otbr_guide.md  nxp_rw61x_ota_software_update.md  nxp_vscode_development.md
examples/all-clusters-app/all-clusters-common/: all-clusters-app.matter  all-clusters-app.zap
examples/all-clusters-app/linux/: AppOptions.cpp
examples/all-clusters-app/nxp/rt/rt1060/: .gn  BUILD.gn  README.md  README_Border_Router.md  README_Ethernet.md  README_OTA_Provider.md  README_OTA_Requestor.md  README_Openthread.md  README_Openthread_SRP_Server.md  README_Wifi.md  README_Wifi_Openthread.md
examples/all-clusters-app/nxp/rt/rt1060/src/: AppFactoryDataRT1060Example.cpp  AppMatterButton.cpp
examples/all-clusters-app/nxp/rt/rw610/: .gn  BUILD.gn  README.md  README_Border_Router.md  README_OTA_Requestor.md  README_Openthread.md  README_Wifi.md
examples/all-clusters-app/nxp/zephyr/: CMakeLists.txt  Kconfig  README.md  prj.conf  prj_fdata.conf  sample.yaml
examples/all-clusters-app/nxp/zephyr/boards/: rd_rw612_bga.overlay  rd_rw612_bga_fdata.conf
examples/all-clusters-app/nxp/zephyr/docs/: rd_rw612_bga.md
examples/all-clusters-app/nxp/zephyr/main/: AppTask.cpp  ZclDoorLockCallbacks.cpp  main.cpp
examples/all-clusters-app/nxp/zephyr/main/include/: AppEvent.h  AppTask.h  CHIPProjectConfig.h
examples/bridge-app/nxp/linux-M2ZigbeeRcp-bridge/: BUILD.gn  README.md  args.gni  main.cpp
examples/bridge-app/nxp/linux-M2ZigbeeRcp-bridge/M2ZigbeeRcp-bridge-zap/: BUILD.gn  M2ZigbeeRcp-bridge-app.matter  M2ZigbeeRcp-bridge-app.zap
examples/bridge-app/nxp/linux-M2ZigbeeRcp-bridge/main/include/: Bridge.h  BridgeConfig.h  BridgeDevice.h  BridgeMgr.h  Device.h  ZigbeeRcpImpl.h  ZigbeeRcpImplDevice.h  ZigbeeRcpMessage.h
examples/bridge-app/nxp/linux-M2ZigbeeRcp-bridge/main/src/: Bridge.cpp  BridgeActions.cpp  BridgeMgr.cpp  Device.cpp  ZigbeeRcpImpl.c  bridged-actions-stub.cpp
examples/bridge-app/nxp/linux-imx/: BUILD.gn  README.md  main.cpp
examples/bridge-app/nxp/linux-imx/main/include/: Bridge.h  BridgeActions.h  BridgeConfig.h  BridgeMgr.h  Device.h  ZcbMessage.h
examples/bridge-app/nxp/linux-imx/main/src/: Bridge.cpp  BridgeActions.cpp  BridgeMgr.cpp  Device.cpp
examples/build_overrides/: k32w0_zigbee_bridge.gni  mw320_sdk.gni
examples/chip-tool/: BUILD.gn
examples/chip-tool/webui/: WebSocketClient.h  chip_tool_web.cpp
examples/common/websocket-server/: WebSocketServer.cpp
examples/contact-sensor-app/contact-sensor-common/: contact-sensor-app.matter  contact-sensor-app.zap
examples/contact-sensor-app/nxp/: README.md
examples/laundry-washer-app/laundry-washer-common/: BUILD.gn  laundry-washer-app.zap
examples/light-switch-combo-app/light-switch-combo-common/: BUILD.gn  light-switch-combo-app.matter  light-switch-combo-app.zap
examples/light-switch-combo-app/nxp/k32w/k32w1/: BUILD.gn  README.md  args.gni
examples/light-switch-combo-app/nxp/k32w/k32w1/include/: CHIPProjectConfig.h
examples/light-switch-combo-app/nxp/k32w/k32w1/main/: AppTask.cpp  binding-handler.cpp  main.cpp
examples/light-switch-combo-app/nxp/k32w/k32w1/main/include/: AppTask.h
examples/lighting-app/lighting-common/: lighting-app.zap
examples/lighting-app/nxp/: README.md
examples/nxp-battery-storage-app/linux/: BUILD.gn
examples/nxp-battery-storage-app/nxp-battery-storage-common/: BUILD.gn  nxp-battery-storage-app.matter  nxp-battery-storage-app.zap
examples/nxp-device-energy-management-app/linux/: BUILD.gn
examples/nxp-device-energy-management-app/nxp-device-energy-management-common/: BUILD.gn  nxp-device-energy-management-app.matter  nxp-device-energy-management-app.zap
examples/nxp-evse-app/linux/: BUILD.gn
examples/nxp-evse-app/nxp-evse-common/: BUILD.gn  nxp-evse-app.matter  nxp-evse-app.zap
examples/nxp-heat-pump-app/linux/: BUILD.gn
examples/nxp-heat-pump-app/nxp-heat-pump-common/: BUILD.gn  nxp-heat-pump-app.matter  nxp-heat-pump-app.zap
examples/nxp-media-app/linux/: BUILD.gn  args.gni  main.cpp
examples/nxp-media-app/nxp-media-common/: BUILD.gn
examples/nxp-media-app/nxp-media-common/clusters/application-launcher/: ApplicationLauncherManager.cpp
examples/nxp-media-app/nxp-media-common/clusters/audio-output/: AudioOutputManager.cpp  AudioOutputManager.h
examples/nxp-media-app/nxp-media-common/clusters/media-playback/: MediaPlaybackManager.cpp  MediaPlaybackManager.h
examples/nxp-media-app/nxp-media-common/include/: AudioOutput.h  MediaIPCHelper.h
examples/nxp-media-app/nxp-media-common/src/: AudioOutput.cpp  MediaIPCHelper.cpp
examples/nxp-network-manager-app/linux/: BUILD.gn
examples/nxp-network-manager-app/nxp-network-manager-common/: BUILD.gn
examples/nxp-solar-power-app/linux/: BUILD.gn
examples/nxp-solar-power-app/nxp-solar-power-common/: BUILD.gn  nxp-solar-power-app.matter  nxp-solar-power-app.zap
examples/nxp-thermostat/linux/: BUILD.gn  args.gni
examples/nxp-water-heater-app/linux/: BUILD.gn
scripts/: bootstrap.bat  checkout_submodules.py
scripts/examples/: imxlinux_example.sh
scripts/setup/: bootstrap.bat  constraints.txt
scripts/tools/: zap_regen_all.py
src/: BUILD.gn
src/app/: BufferedReadCallback.cpp  BufferedReadCallback.h  ClusterStateCache.cpp  ClusterStateCache.h  CommandHandler.cpp  CommandHandlerImpl.cpp  ReadClient.cpp  ReadClient.h
src/controller/: ExamplePersistentStorage.cpp  ExamplePersistentStorage.h  TypedReadCallback.h
src/credentials/: FabricTable.h
src/crypto/: BUILD.gn  CHIPCryptoPAL.h  CHIPCryptoPALOpenSSL.cpp  CHIPCryptoPALTinyCrypt.cpp  CHIPCryptoPALmbedTLS.cpp  crypto.gni
src/inet/: UDPEndPointImplLwIP.cpp
src/lib/: web.gni
src/lwip/: BUILD.gn
src/platform/: BUILD.gn  device.gni
src/system/: BUILD.gn
(+1800 files in other folders)
